package(default_visibility = [
    "//visibility:public",
])

filegroup(
    name = "kvstore-staging",
    srcs = [":kvstore_state.json5"],
)

filegroup(
    name = "ledger-staging",
    srcs = [":ledger_state.json5"],
)

filegroup(
    name = "compute-staging",
    srcs = [":compute_state.json5"],
)

filegroup(
    name = "web-staging",
    srcs = [":web_state.json5"],
)

filegroup(
    name = "ledger-migrations",
    srcs = ["ledger_migrations.json"],
)

filegroup(
    name = "abci-ledger-migrations",
    srcs = ["abci_migrations.json"],
)

