[package]
name = "genesis-from-db"
version = "0.2.2" # managed by release.sh
edition = "2021"
description = "Create new genesis file from existing storage."
license-file = "../../LICENSE"
homepage = "https://liftedinit.org/"
repository = "https://github.com/liftedinit/many-rs.git"
authors = ["The Lifted Initiative <crates@liftedinit.org>"]

[[bin]]
name = "genesis-from-db"
doc = false

[dependencies]
base64 = "0.21.2"
clap = { version = "3.2.25", features = ["derive"] }
const_format = "0.2.31"
hex = "0.4.3"
many-error = { path = "../many-error", version = "0.2.2" } # managed by release.sh
many-ledger = { path = "../many-ledger", version = "0.2.2" } # managed by release.sh
many-modules = { path = "../many-modules", version = "0.2.2" } # managed by release.sh
many-types = { path = "../many-types", version = "0.2.2" } # managed by release.sh
merk = { git = "https://github.com/liftedinit/merk.git", rev = "857bf81963d9282ab03438da5013e1f816bd9da1" }
minicbor = "0.19.1"
serde = "=1.0.163"
serde_derive = "1.0.163"
serde_json = "1.0.96"
strum = "0.24.1"
strum_macros = "0.24.3"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
