[package]
name = "http-proxy"
version = "0.3.0" # managed by release.sh
edition = "2021"
description = "HTTP proxy prototype."
license-file = "../../LICENSE"
homepage = "https://liftedinit.org/"
repository = "https://github.com/liftedinit/many-rs.git"
authors = ["The Lifted Initiative <crates@liftedinit.org>"]
build = "build.rs"

[[bin]]
name = "http-proxy"
doc = false

[dependencies]
base64 = "0.21.2"
clap = { version = "3.2.25", features = ["derive"] }
hex = "0.4.3"
log-panics = { version = "2.1.0", features = ["with-backtrace"]}
minicbor = { version = "0.19.1", features = ["derive", "std"] }
many-client = { path = "../many-client", version = "0.3.0" } # managed by release.sh
many-cli-helpers = { path = "../many-cli-helpers", version = "0.3.0" } # managed by release.sh
many-identity = { path = "../many-identity", version = "0.3.0" } # managed by release.sh
many-identity-dsa = { path = "../many-identity-dsa", version = "0.3.0" } # managed by release.sh
many-modules = { path = "../many-modules", version = "0.3.0" } # managed by release.sh
new_mime_guess = "4.0.1"
syslog-tracing = "0.2.0"
tiny_http = "0.12.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tokio = { version = "1.28.1", features = [ "full" ] }

[build-dependencies]
vergen = { version = "8.2.1", features = ["git", "git2"] }
