[package]
name = "http_proxy"
version = "0.1.0"
edition = "2021"
authors = ["The Lifted Initiative"]
license = "Apache-2.0"
description = ""
readme = "README.md"
homepage = "https://liftedinit.org"
repository = "https://github.com/liftedinit/many-framework"
keywords = ["cli", "web3", "blockchain", "tendermint", "proto", "crypto", "liftedinit"]
categories = ["command-line-utilities"]

[[bin]]
name = "http_proxy"
doc = false

[dependencies]
clap = { version = "3.0.0", features = ["derive"] }
hex = "0.4.3"
minicbor = { version = "0.18.0", features = ["derive", "std"] }
many-client = { git = "https://github.com/liftedinit/many-rs.git", rev = "ce03b88dea51232ca578d19d52cfc263cfc4080b" }
many-identity = { git = "https://github.com/liftedinit/many-rs.git", rev = "ce03b88dea51232ca578d19d52cfc263cfc4080b" }
many-identity-dsa = { git = "https://github.com/liftedinit/many-rs.git", rev = "ce03b88dea51232ca578d19d52cfc263cfc4080b" }
many-kvstore = { path = "../many-kvstore" }
many-modules = { git = "https://github.com/liftedinit/many-rs.git", rev = "ce03b88dea51232ca578d19d52cfc263cfc4080b" }
new_mime_guess = "4.0.0"
syslog-tracing = "0.1"
tiny_http = "0.11.0"
tracing = "0.1.29"
tracing-subscriber = "0.3"
tokio = { version = "1.24.1", features = [ "full" ] }
