[package]
name = "http_proxy"
version = "0.1.1" # managed by release.sh
edition = "2021"
description = "HTTP proxy prototype."
license-file = "../../LICENSE"
homepage = "https://liftedinit.org/"
repository = "https://github.com/liftedinit/many-rs.git"
authors = ["The Lifted Initiative <crates@liftedinit.org>"]

[[bin]]
name = "http_proxy"
doc = false

[dependencies]
clap = { version = "3.2.23", features = ["derive"] }
hex = "0.4.3"
log-panics = { version = "2", features = ["with-backtrace"]}
minicbor = { version = "0.19.1", features = ["derive", "std"] }
many-client = { path = "../many-client", version = "0.1.1" } # managed by release.sh
many-identity = { path = "../many-identity", version = "0.1.1" } # managed by release.sh
many-identity-dsa = { path = "../many-identity-dsa", version = "0.1.1" } # managed by release.sh
many-modules = { path = "../many-modules", version = "0.1.1" } # managed by release.sh
new_mime_guess = "4.0.0"
syslog-tracing = "0.1"
tiny_http = "0.12.0"
tracing = "0.1.29"
tracing-subscriber = "0.3"
tokio = { version = "1.24.1", features = [ "full" ] }
