[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
many-mock = { path = "../many-mock", version = "0.1.0" }
many-server = { path = "../many-server", version = "0.1.0", features = ["mock"] }
many-client = { path = "../many-client", version = "0.1.0" }
many-identity = { path = "../many-identity", version = "0.1.0" }
rspec = "1.0"
serde_json = "1.0"
