load("@crate_index//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_binary")

package(default_visibility = [
    "//:__pkg__",
    "//tests/e2e:__subpackages__",
    "//tests/resiliency:__subpackages__",
])

rust_binary(
    name = "kvstore",
    srcs = glob(include = ["src/**/*.rs"]),
    aliases = aliases(),
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
    ),
    deps = all_crate_deps(
        normal = True,
    ) + [
        "//src/many-client",
        "//src/many-cli-helpers",
        "//src/many-error",
        "//src/many-identity",
        "//src/many-identity-dsa",
        "//src/many-modules",
        "//src/many-protocol",
        "//src/many-types",
    ],
)
