[package]
name = "kvstore"
version = "0.1.0" # managed by release.sh
edition = "2021"
authors = ["The Lifted Initiative"]
license = "Apache-2.0"
description = ""
readme = "README.md"
homepage = "https://liftedinit.org"
repository = "https://github.com/liftedinit/many-framework"
keywords = ["cli", "web3", "blockchain", "tendermint", "proto", "crypto", "liftedinit"]
categories = ["command-line-utilities"]

[[bin]]
name = "kvstore"
doc = false

[dependencies]
clap = { version = "3.0.0", features = ["derive"] }
hex = "0.4.3"
indicatif = "0.16.2"
log-panics = { version = "2", features = ["with-backtrace"]}
minicbor = { version = "0.18.0", features = ["derive", "std"] }
many-client = { path = "../many-client" }
many-error = { path = "../many-error" }
many-identity = { path = "../many-identity" }
many-identity-dsa = { path = "../many-identity-dsa", features = ["ed25519", "ecdsa"] }
many-modules = { path = "../many-modules" }
many-protocol = { path = "../many-protocol" }
many-types = { path = "../many-types" }
syslog-tracing = "0.1"
tracing = "0.1.29"
tracing-subscriber = "0.3"
tokio = { version = "1.24.1", features = [ "full" ] }
