[package]
name = "ledger-db"
version = "0.1.1" # managed by release.sh
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
keywords = ["cli", "web3", "blockchain", "tendermint", "proto", "crypto", "liftedinit"]
categories = ["command-line-utilities"]
description = "Ledger storage debugging CLI."
license-file = "../../LICENSE"
homepage = "https://liftedinit.org/"
repository = "https://github.com/liftedinit/many-rs.git"
authors = ["The Lifted Initiative <crates@liftedinit.org>"]

[[bin]]
name = "ledger-db"
doc = false

[dependencies]
clap = { version = "3.0.0", features = ["derive"] }
derive_more = "0.99"
hex = "0.4.3"
merk_v1 = { package = "merk", git = "https://github.com/liftedinit/merk.git", rev = "857bf81963d9282ab03438da5013e1f816bd9da1" }
merk_v2 = { package = "merk", git = "https://github.com/MavenRain/merk.git", branch = "merk-hash-migration" }
many-modules = { path = "../many-modules", version = "0.1.1" } # managed by release.sh
many-types = { path = "../many-types", version = "0.1.1" } # managed by release.sh
minicbor = "0.18.0"
