[package]
name = "ledger-db"
version = "0.2.6" # managed by release.sh
edition = "2021"
description = "Ledger storage debugging CLI."
license-file = "../../LICENSE"
homepage = "https://liftedinit.org/"
repository = "https://github.com/liftedinit/many-rs.git"
authors = ["The Lifted Initiative <crates@liftedinit.org>"]

[[bin]]
name = "ledger-db"
doc = false

[dependencies]
clap = { version = "3.2.25", features = ["derive"] }
hex = "0.4.3"
merk = { git = "https://github.com/liftedinit/merk.git", rev = "857bf81963d9282ab03438da5013e1f816bd9da1" }
many-modules = { path = "../many-modules", version = "0.2.6" } # managed by release.sh
many-types = { path = "../many-types", version = "0.2.6" } # managed by release.sh
minicbor = "0.19.1"
