[package]
name = "ledger"
version = "0.1.0" # managed by release.sh
edition = "2021"
authors = ["The Lifted Initiative"]
license = "Apache-2.0"
description = ""
readme = "README.md"
homepage = "https://liftedinit.org"
repository = "https://github.com/liftedinit/many-framework"
keywords = ["cli", "web3", "blockchain", "tendermint", "proto", "crypto", "liftedinit"]
categories = ["command-line-utilities"]

[[bin]]
name = "ledger"
doc = false

[dependencies]
anyhow = "1.0.69"
clap = { version = "3.0.0", features = ["derive"] }
crc-any = "2.4.0"
hex = "0.4.3"
humantime = "2.1.0"
indicatif = "0.16.2"
lazy_static = "1.4.0"
mime_guess = "2.0.4"
minicbor = { version = "0.18.0", features = ["derive", "std"] }
num-bigint = "0.4.3"
many-cli-helpers = { path = "../many-cli-helpers" }
many-client = { path = "../many-client" }
many-identity = { path = "../many-identity", features = ["serde"] }
many-identity-dsa = { path = "../many-identity-dsa", features = ["ed25519", "ecdsa"]  }
many-identity-hsm = { path = "../many-identity-hsm" }
many-modules = { path = "../many-modules" }
many-protocol = { path = "../many-protocol" }
many-types = { path = "../many-types" }
regex = "1.5.4"
rpassword = "6.0"
serde_json = "1.0.91"
tracing = "0.1.29"
tokio = { version = "1.24.1", features = [ "full" ] }
