[package]
name = "ledger"
version = "0.3.0" # managed by release.sh
edition = "2021"
description = "MANY ledger CLI client."
license-file = "../../LICENSE"
homepage = "https://liftedinit.org/"
repository = "https://github.com/liftedinit/many-rs.git"
authors = ["The Lifted Initiative <crates@liftedinit.org>"]

[[bin]]
name = "ledger"
doc = false

[dependencies]
anyhow = "1.0.71"
clap = { version = "3.2.25", features = ["derive"] }
crc-any = "2.4.3"
hex = "0.4.3"
humantime = "2.1.0"
indicatif = "0.17.3"
lazy_static = "1.4.0"
mime_guess = "2.0.4"
minicbor = { version = "0.19.1", features = ["derive", "std"] }
num-bigint = "0.4.3"
many-cli-helpers = { path = "../many-cli-helpers", version = "0.3.0" } # managed by release.sh
many-client = { path = "../many-client", version = "0.3.0" } # managed by release.sh
many-identity = { path = "../many-identity", features = ["serde"], version = "0.3.0" } # managed by release.sh
many-identity-dsa = { path = "../many-identity-dsa", features = ["ed25519", "ecdsa"], version = "0.3.0" } # managed by release.sh
many-identity-hsm = { path = "../many-identity-hsm", version = "0.3.0" } # managed by release.sh
many-modules = { path = "../many-modules", version = "0.3.0" } # managed by release.sh
many-protocol = { path = "../many-protocol", version = "0.3.0" } # managed by release.sh
many-types = { path = "../many-types", version = "0.3.0" } # managed by release.sh
regex = "1.8.3"
rpassword = "7.2.0"
serde_json = "1.0.96"
tracing = "0.1.37"
tokio = { version = "1.28.1", features = [ "full" ] }
