load("@crate_index//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test", "rust_test_suite")
load("@rules_rust//cargo:cargo_build_script.bzl", "cargo_build_script")

package(default_visibility = ["//src/many-ledger:__pkg__"])

cargo_build_script(
    name = "build_script",
    srcs = ["build.rs"],
    data = ["//:.git"],
    deps = all_crate_deps(build = True),
)

rust_binary(
    name = "many-abci",
    srcs = glob(include = ["src/**/*.rs"]),
    aliases = aliases(),
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
    ),
    deps = all_crate_deps(
        normal = True,
    ) + [
        ":build_script",
    ]
)

rust_library(
    name = "many-abci-lib",
    srcs = glob(include = ["src/**/*.rs"]),
    aliases = aliases(),
    crate_name = "many_abci",
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
    ),
    deps = all_crate_deps(
        normal = True,
    ),
)
