[package]
name = "many-abci"
version = "0.1.0"
edition = "2021"
authors = ["The Lifted Initiative"]
license = "Apache-2.0"
description = ""
readme = "README.md"
homepage = "https://liftedinit.org"
repository = "https://github.com/liftedinit/many-framework"
keywords = ["cli", "web3", "blockchain", "tendermint", "proto", "crypto", "liftedinit"]
categories = ["command-line-utilities"]
build = "build.rs"

[[bin]]
name = "many-abci"
doc = false

[dependencies]
async-trait = "0.1.51"
base64 = "0.21.0"
ciborium = "0.2.0"
clap = { version = "3.0.0", features = ["derive"] }
coset = "0.3"
hex = "0.4.3"
itertools = "0.10.5"
json5 = "0.4.1"
lazy_static = "1.4.0"
linkme = { version = "0.3.5", features = ["used_linker"] }
minicbor = { version = "0.18.0", features = ["derive", "std"] }
many-cli-helpers = { path = "../many-cli-helpers", version = "0.1.0" }
many-client = { path = "../many-client", version = "0.1.0" }
many-error = { path = "../many-error", version = "0.1.0" }
many-identity = { path = "../many-identity", version = "0.1.0" }
many-identity-dsa = { path = "../many-identity-dsa", version = "0.1.0" }
many-identity-webauthn = { path = "../many-identity-webauthn", version = "0.1.0" }
many-migration = { path = "../many-migration", version = "0.1.0" }
many-modules = { path = "../many-modules", version = "0.1.0" }
many-protocol = { path = "../many-protocol", version = "0.1.0" }
many-server = { path = "../many-server", version = "0.1.0" }
many-types = { path = "../many-types", version = "0.1.0" }
num-integer = "0.1.45"
reqwest = "0.11.11"
serde_json = "1.0.72"
sha2 = "0.10.1"
signal-hook = "0.3.13"
tendermint = "0.28.0"
tendermint-abci = "0.28.0"
tendermint-rpc = { version = "0.28.0", features = [ "http-client" ] }
tendermint-proto = "0.28.0"
tokio = { version = "1.24.1", features = [ "full" ] }
tracing = "0.1.28"

[build-dependencies]
vergen = "7"
