[package]
name = "many-abci"
version = "0.2.5" # managed by release.sh
edition = "2021"
description = "MANY ABCI server."
license-file = "../../LICENSE"
homepage = "https://liftedinit.org/"
repository = "https://github.com/liftedinit/many-rs.git"
authors = ["The Lifted Initiative <crates@liftedinit.org>"]
build = "build.rs"

[[bin]]
name = "many-abci"
doc = false

[dependencies]
async-trait = "0.1.68"
base64 = "0.21.2"
ciborium = "0.2.1"
clap = { version = "3.2.25", features = ["derive"] }
coset = "0.3.4"
hex = "0.4.3"
itertools = "0.10.5"
json5 = "0.4.1"
lazy_static = "1.4.0"
linkme = { version = "0.3.9", features = ["used_linker"] }
minicbor = { version = "0.19.1", features = ["derive", "std"] }
many-cli-helpers = { path = "../many-cli-helpers", version = "0.2.5" } # managed by release.sh
many-client = { path = "../many-client", version = "0.2.5" } # managed by release.sh
many-error = { path = "../many-error", version = "0.2.5" } # managed by release.sh
many-identity = { path = "../many-identity", version = "0.2.5" } # managed by release.sh
many-identity-dsa = { path = "../many-identity-dsa", version = "0.2.5" } # managed by release.sh
many-identity-webauthn = { path = "../many-identity-webauthn", version = "0.2.5" } # managed by release.sh
many-migration = { path = "../many-migration", version = "0.2.5" } # managed by release.sh
many-modules = { path = "../many-modules", version = "0.2.5" } # managed by release.sh
many-protocol = { path = "../many-protocol", version = "0.2.5" } # managed by release.sh
many-server = { path = "../many-server", version = "0.2.5" } # managed by release.sh
many-server-cache = { path = "../many-server-cache", version = "0.2.5" } # managed by release.sh
many-types = { path = "../many-types", version = "0.2.5" } # managed by release.sh
num-integer = "0.1.45"
reqwest = "0.11.18"
serde_json = "1.0.96"
sha2 = "0.10.6"
signal-hook = "0.3.15"
tendermint = "0.29.1"
tendermint-abci = "0.29.1"
tendermint-rpc = { version = "0.29.1", features = [ "http-client" ] }
tendermint-proto = "0.29.1"
tokio = { version = "1.28.1", features = [ "full" ] }
tracing = "0.1.37"

[build-dependencies]
vergen = { version = "8.2.1", features = ["git", "git2"] }
