[package]
name = "many-cli-helpers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
log-panics = { version = "2", features = ["with-backtrace"]}
syslog-tracing = "0.1.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
