[package]
name = "many-cli-helpers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "3.0", features = ["derive"] }
log-panics = { version = "2", features = ["with-backtrace"]}
many-error = { path = "../many-error", version = "0.1.0" }
minicbor = { version = "0.18.0", features = ["derive", "std", "half"] }
syslog-tracing = "0.1.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
