load("@rules_rust//rust:defs.bzl", "rust_binary")

rust_binary(
    name = "many-cli",
    srcs = [
        "src/main.rs",
    ],
    deps = [
        "//src/many",
        "//src/many-client",
        "@crate_index//:anyhow",
        "@crate_index//:atty",
        "@crate_index//:base64",
        "@crate_index//:cbor-diag",
        "@crate_index//:clap",
        "@crate_index//:coset",
        "@crate_index//:hex",
        "@crate_index//:minicbor",
        "@crate_index//:rpassword",
        "@crate_index//:tokio",
        "@crate_index//:tracing",
        "@crate_index//:tracing-subscriber",
        "@crate_index//:url",
    ],
)
